# garmin-80-20-plan-generator

./: .gitignore  AI_PROMPT_BUGFIX_DEBUG.md  AI_PROMPT_FEATURE_WORK.md  AI_PROMPT_RELEASE_PACKAGING.md  AI_PROMPT_SMART_ROUTER.md  AI_UPDATE_PROMPT.md  LICENSE  Packaging_Pipeline.md  README.md  SETUP_AND_USAGE.txt  Unit_test_strategy.md  pyproject.toml  third_party_licenses.txt
.github/workflows/: ci.yml
docs/: activity-metrics-data-lineage.md  continue-sidebar.md
packaging/: build.ps1  launcher.py
packaging/installer/: GarminDataHub.iss
scripts/: add_ftp_columns.py  bump_version.py  check_helpers.py  check_queries_cmd.py  debug_metrics.py  fix_hr_zones.py  migrate_activity_metrics.py  migrate_schema.py
src/garmin_data_hub/: cli_backup_ingest.py  mcp_sidecar_client.py  paths.py
src/garmin_data_hub/analytics/: athlete_profile.py  post_sync_refresh.py  queries.py  training_load.py
src/garmin_data_hub/db/: __init__.py  athlete_metrics.py  migrate.py  queries.py  schema.sql  sqlite.py
src/garmin_data_hub/exports/: master_export.py
src/garmin_data_hub/ingest/: fingerprint.py  parsers.py  parsers_csv.py  parsers_fit.py  trackpoints.py  worker_process.py  writer.py
src/garmin_data_hub/services/: __init__.py  athlete_metrics_service.py  plan_persistence.py
test/: AI_ingest instructions.txt  master_prompt  test.py
test_pages/: _1_MCP_Query.py
tests/: conftest.py  test_cli_trackpoints.py  test_metrics_refresh.py  test_plan_persistence.py  test_schema_migrations.py  test_sync_progress.py  test_trackpoint_parser_wiring.py
(+22 files in other folders)
