[project]
name = "garmin-data-hub"
version = "0.2.6"
description = "Garmin FIT/CSV ingestion + analytics + exports (SQLite + Streamlit)"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.37",
  "pandas>=2.2",
  "numpy>=2.0",
  "openpyxl>=3.1.5",
  "fitparse>=1.2.0",
  "gpxpy>=1.6.2",
  "garmin-givemydata>=0.1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
garmin-sync = "garmin_data_hub.cli_backup_ingest:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
garmin_data_hub = ["db/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]


